--- a/style.css
+++ b/style.css
@@ -1,10 +1,31 @@
-.chmo {
-    width: 60px;
-    height: 30px;
-    font-size: 10px
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Pacifico', cursive;
+    text-align: center;
 }
-.horoshiy {
+p, .oy {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 40px;
+}
+ul {
+   font-family: 'IBM Plex Mono', monospace;
+    font-size: 25px;
+}
+.korshak1 {
     width: 600px;
-    height: 600px;
-    background: red;
+    height: 300px
+}
+.unir {
+    width: 300px;
+    300px;
+    
+}
+.it {
+    color: red;
+}
+.marinet {
+}
+.len {
+    font-size: 20px;
+    color: yellow;
+    background: white;
 }
